# 2mat

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: 2mat.hpp  container.hpp  element.hpp  file.hpp  matrix.hpp  mstruct.hpp  types.hpp  util.hpp
inc/date/: leap.hpp
inc/io/: fwriter.hpp
src/: container.cpp  container.hpp  datenum.cpp  datenum.hpp  element.cpp  element.hpp  file.hpp  matrix.cpp  matrix.hpp  mstruct.cpp  mstruct.hpp  types.hpp  util.cpp  util.hpp
src/date/: leap.cpp  leap.hpp
src/io/: fwriter.cpp  fwriter.hpp
src/v6/: write.cpp
src/v7/: write.cpp
src/v7_3/: write.cpp
